# chatbot_fandom

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  error_dump.txt  justfile  main.py  notes.md  pyproject.toml  shell.nix
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/backend/: app.py  ask.py  gpt.py  history.py  mongo.py  pinecone_connector.py
backend/src/backend/io/: mongo.py  pinecone_connector.py  redis.py
backend/src/backend/routes/: ask.py  history.py
backend/src/routes/: history.py
chatbot/pipeline/: qa_pipeline.py
clients/: pyproject.toml
clients/clients/: __init__.py  database.py  embedder.py  fandom.py  gpt.py  vector_db.py
clients/clients/database/: __init__.py  models.py
frontend/: Dockerfile
frontend/chatbot/: Dockerfile  index.html  package.json  vite.config.ts
frontend/chatbot/src/: App.css  App.tsx  types.ts
frontend/chatbot/src/components/: ChatHistory.tsx  GameSelector.tsx  Input.tsx
frontend/src/components/: Input.tsx
ingest/: README.md  __main__.py  error_dump.txt  ingest_models.py  justfile  pyproject.toml  utils.py
ingest/generators/: markdown.py
ingest/ingest/: __main__.py  models.py
ingest/ingest/generators/: markdown.py
ingest/ingest/parser/: __init__.py  main.py  utils_scraper.py
ingest/ingest/parser/scrapers/: scraper.py
ingest/ingestors/: db.py  mongodb.py  openai.py  pinecone.py
ingest/old_models/: postgres.py  redis.py
ingest/parser/: __init__.py  client.py  utils_scraper.py
ingest/parser/scrapers/: page_scraper.py  side_section_scraper.py
ingest/scraper/: __init__.py  page_lister.py  utils_scraper.py
ingest/scraper/scrapers/: page_scraper.py
ingest/src/generators/: markdown.py
ingest/src/parser/: __init__.py  utils_scraper.py
ingest/tests/: small_test.py  test_parse_table.py
models/: __init__.py  mongo.py  pinecone.py  pyproject.toml
models/models/: db.py
models/models.egg-info/: PKG-INFO  SOURCES.txt
parser/: __main__.py  client.py  main.py  page_lister.py  temp.py  urls.py  utils_scraper.py  valheim_page_scraper.py
parser/runners/: runner.py
parser/scrapers/: page_scraper.py  scraper.py  side_section_scraper.py
scraper/: __main__.py  pyproject.toml  pyproject_poetry.toml  temp.py
scraper/ingestion/: pinecone_ingest.py  test.py
scraper/parser/: main.py  page_lister.py  temp.py  utils_scraper.py
scraper/parser/scrapers/: page_scraper.py
scraper/src/scraper/: __init__.py
scraper/tests/: page_scrape_tests.py  test_parse_table.py
tests/: small_test.py  test_pipeline.py
