[tool.poetry]
name = "chatbot-fandom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "parser" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12"
httpx = "0.26.0"
tqdm = "4.66"
result = "0.16.0"
langchain = "*"
InstructorEmbedding = "*"
torch = '*'
sentence-transformers = "*"
faiss-cpu = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
types-beautifulsoup4 = "4.12"
types-requests = "2.31"
types-tqdm = "4.66"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse = "parser.__main__:main"

[tool.ruff]
line-length = 120
extend-exclude = []
target-version = "py311"
select = [
    "E",      # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "D",      # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "W292",   # https://docs.astral.sh/ruff/rules/missing-newline-at-end-of-file/
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "BLE001", # https://docs.astral.sh/ruff/rules/blind-except/
    "PT",     # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "RUF",    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "N",      # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "ISC",    # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "C4",     # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "ICN",    # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "T20",    # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TCH",    # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "PIE",    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
]
ignore = [
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D101", # https://docs.astral.sh/ruff/rules/undocumented-public-class/
    "D102", # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D103", # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "D401", # https://docs.astral.sh/ruff/rules/non-imperative-mood/
    "D417", # https://docs.astral.sh/ruff/rules/undocumented-param/
    # 'ruff format' recommends to turn these off to avoid conflicts:
    "D206",   # https://docs.astral.sh/ruff/rules/indent-with-spaces/#indent-with-spaces-d206
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    "T201",
]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["result"]
ignore_missing_imports = true
