[project]
name = "clients"
version = "0.1.0"
requires-python = ">=3.13"
description = "Add your description here"
dependencies = [
    "sqlalchemy>=2.0.43",
    "httpx",
    "qdrant-client>=1.15.1",
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["clients/"]
