[project]
name = "ingest"
version = "0.1.0"
requires-python = ">= 3.13"
description = "Add your description here"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "tqdm>=4.66.2",
    "result>=0.16.1",
    "pydantic>=2.6.3",
    "click>=8.1.7",
    "openai>=1.13.3",
    "pinecone>=7.3.0",
    "pydantic-settings>=2.2.1",
    "pymongo>=4.6.2",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.43",
    "clients",
]
readme = "README.md"
