[project]
name = "ingest"
version = "0.1.0"
requires-python = ">= 3.13"
description = "Add your description here"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.66.2",
    "result>=0.16.1",
    "pydantic>=2.6.3",
    "click>=8.1.7",
    "pydantic-settings>=2.2.1",
    "rich>=13.7.1",
    "clients",
]
readme = "README.md"
