[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simonadi", email = "viknesh.adi@gmail.com" }
]
dependencies = [
    "httpx>=0.26.0",
    "tqdm>=4.66.2",
    "result>=0.16.0",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.6.1",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "scraper:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]
